--- a/Operacoes.html
+++ b/Operacoes.html
@@ -3,25 +3,9 @@
 <head>
 	<title>Operações</title>
 	<meta charset="utf8">
+	<script src="Operacoes.js"></script>
 </head>
 <body>
-	<script>
-		var n1 = parseInt(prompt("Digite o número 1:"));
-		var n2 = parseInt(prompt("Digite o número 2:"));
 
-		var sum = n1 + n2;
-		var sub = n1 - n2;
-		var mul = n1 * n2;
-		var div = n1 / n2;
-		var res = n1 % n2;
-
-		alert(
-			"Soma: " + sum +
-			"\nSubtração: " + sub + 
-			"\nMultiplicação: " + mul + 
-			"\nDivisão: " + div + 
-			"\nResto: " + res
-			);
-	</script>
 </body>
 </html>
